--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~16.0.0",
     "@angular/router": "~16.0.0",
     "chart.js": "^3.3.2",
+    "jwt-decode": "^4.0.0",
     "primeflex": "^3.2.0",
     "primeicons": "5.0.0",
     "primeng": "16.0.0",
