--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "jwt-decode": "^4.0.0",
     "primeflex": "^3.2.0",
     "primeicons": "5.0.0",
-    "primeng": "16.0.0",
+    "primeng": "^16.0.0",
     "prismjs": "^1.30.0",
     "rxjs": "~7.8.0",
     "semver": "^7.5.3",
