--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@angular/platform-browser-dynamic": "~16.0.0",
     "@angular/router": "~16.0.0",
     "@babel/runtime": "^7.26.0",
-    "chart.js": "^3.3.2",
+    "chart.js": "^4.4.1",
     "jwt-decode": "^4.0.0",
+    "ng2-charts": "^4.1.1",
     "primeflex": "^3.2.0",
     "primeicons": "5.0.0",
     "primeng": "16.0.0",
