--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~16.0.0",
     "@angular/platform-browser-dynamic": "~16.0.0",
     "@angular/router": "~16.0.0",
-    "chart.js": "^3.3.2",
+    "chart.js": "^3.9.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "primeflex": "^3.2.0",
     "primeicons": "5.0.0",
     "primeng": "16.0.0",
