--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~16.0.0",
     "@angular/platform-browser-dynamic": "~16.0.0",
     "@angular/router": "~16.0.0",
+    "@types/marked": "^4.3.0",
     "@types/peerjs": "^1.1.0",
     "chart.js": "^3.3.2",
+    "marked": "^4.3.0",
+    "ngx-markdown": "^16.0.0",
     "peerjs": "^1.5.4",
     "primeflex": "^3.2.0",
     "primeicons": "5.0.0",
