--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~16.0.0",
     "@angular/platform-browser-dynamic": "~16.0.0",
     "@angular/router": "~16.0.0",
+    "@ctrl/ngx-emoji-mart": "^9.2.0",
     "chart.js": "^3.3.2",
     "jwt-decode": "^4.0.0",
     "ng-openapi-gen": "^0.53.0",
