--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@angular/platform-browser": "~16.0.0",
     "@angular/platform-browser-dynamic": "~16.0.0",
     "@angular/router": "~16.0.0",
+    "@stripe/stripe-js": "^7.0.0",
     "chart.js": "^3.3.2",
     "primeflex": "^3.2.0",
-    "primeicons": "5.0.0",
-    "primeng": "16.0.0",
+    "primeicons": "^5.0.0",
+    "primeng": "^16.0.0",
     "prismjs": "1.9.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
