--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@abacritt/angularx-social-login": "^2.3.0",
     "@angular/animations": "~16.0.0",
     "@angular/cdk": "~16.0.0",
     "@angular/common": "~16.0.0",
@@ -21,10 +22,10 @@
     "@angular/router": "~16.0.0",
     "@babel/runtime": "^7.26.0",
     "chart.js": "^4.4.1",
-    "jwt-decode": "^4.0.0",
-    "ng2-charts": "^4.1.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "jwt-decode": "^4.0.0",
+    "ng2-charts": "^4.1.1",
     "primeflex": "^3.2.0",
     "primeicons": "5.0.0",
     "primeng": "^16.0.0",
