added face-api ai

--- a/package.json
+++ b/package.json
@@ -20,19 +20,20 @@
     "@angular/platform-browser-dynamic": "~16.0.0",
     "@angular/router": "~16.0.0",
     "@babel/runtime": "^7.26.0",
-    "chart.js": "^4.4.1",
-    "jwt-decode": "^4.0.0",
-    "ng2-charts": "^4.1.1",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.1",
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@mediapipe/control_utils": "^0.6.1675466023",
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/hands": "^0.4.1675469240",
     "@types/marked": "^4.3.0",
     "@types/peerjs": "^1.1.0",
+    "buffer": "^6.0.3",
     "chart.js": "^3.3.2",
+    "face-api.js": "^0.22.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "jwt-decode": "^4.0.0",
     "marked": "^4.3.0",
+    "ng2-charts": "^4.1.1",
     "ngx-markdown": "^16.0.0",
     "peerjs": "^1.5.4",
     "primeflex": "^3.2.0",
@@ -46,7 +47,6 @@
     "web-animations-js": "^2.3.2",
     "webpack": "^5.88.0",
     "zone.js": "~0.13.0"
-
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~16.0.0",
