--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -20,20 +21,19 @@
     "@angular/platform-browser-dynamic": "~16.0.0",
     "@angular/router": "~16.0.0",
     "@babel/runtime": "^7.26.0",
-    "chart.js": "^4.4.1",
-    "jwt-decode": "^4.0.0",
-    "ng2-charts": "^4.1.1",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.1",
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@mediapipe/control_utils": "^0.6.1675466023",
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/hands": "^0.4.1675469240",
+    "@stripe/stripe-js": "^7.0.0",
     "@types/marked": "^4.3.0",
     "@types/peerjs": "^1.1.0",
-    "@stripe/stripe-js": "^7.0.0",
     "chart.js": "^3.3.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "jwt-decode": "^4.0.0",
     "marked": "^4.3.0",
+    "ng2-charts": "^4.1.1",
     "ngx-markdown": "^16.0.0",
     "peerjs": "^1.5.4",
     "primeflex": "^3.2.0",
@@ -47,7 +47,6 @@
     "web-animations-js": "^2.3.2",
     "webpack": "^5.88.0",
     "zone.js": "~0.13.0"
-
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~16.0.0",
@@ -56,7 +55,9 @@
     "@types/jasmine": "~4.0.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^16.0.0",
+    "angular-eslint": "19.3.0",
     "codelyzer": "^6.0.0",
+    "eslint": "^9.23.0",
     "jasmine-core": "~4.0.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.0",
@@ -68,6 +69,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~10.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.9.5"
+    "typescript": "~4.9.5",
+    "typescript-eslint": "8.27.0"
   }
 }
